# SERIF

./: .gitignore  .readthedocs.yaml  README.rst  SERIF.pyt  pyproject.toml
SERIF_toolbox/: SERIF.Segmentation.pyt.xml  SERIF.pyt  SERIF.pyt.xml
docs/: arcgis_toolbox.rst  conf.py  config_run_env.rst  docs.yml  index.rst  requirements.txt  thresholds.rst
src/: index_processer.py  visualisation.py
