[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "SERIF"
authors = [{name = "Eisinhower Rincon", email = "eisinhower.rincon@inrs.ca"}]
dynamic = ["version", "description"]
readme = {file = "README.txt", content-type = "text/x-rst"}
[project]
license = {file = "LICENSE"}